# baserun-py

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: pre-commit.yaml
baserun/: __init__.py  annotation.py  api.py  api_key.py  baserun.py  capture.py  checks.py  cli.py  constants.py  exceptions.py  exporter.py  grpc.py  helpers.py  langchain.py  mixins.py  openai.py  pytest_plugin.py  sessions.py  templates.py  templates_util.py  thread_wrapper.py  unittests_class.py  users.py  utils.py  worker.py
baserun/evals/: evals.py  json.py
baserun/instrumentation/: anthropic.py  base_instrumentor.py  google.py  instrumentation.py  instrumentation_manager.py  instrumented_wrapper.py  langchain.py  llamaindex.py  openai.py  span_attributes.py  wrappers.py
baserun/integrations/: integration.py  langchain.py  llamaindex.py
baserun/models/: dataset.py  evals.py  evaluators.py  experiment.py  scenario.py  tags.py
baserun/patches/: anthropic.py  constants.py  openai.py  patch.py
baserun/v1/: baserun.proto  baserun_pb2.py  baserun_pb2.pyi  baserun_pb2_grpc.py
baserun/v2/: __init__.py  api.py  mixins.py
baserun/v2/models/: evals.py  tags.py
baserun/v2/wrappers/: openai.py
baserun/wrappers/: anthropic.py  generic.py  openai.py
tests/: annotation_test.py  anthropic_test.py  baserun_test.py  capture_test.py  conftest.py  example_data.py  explicit_init.py  full_matrix_test.py  gemini_test.py  langchain_test.py  llama_index_test.py  openai_test.py  openai_test_v2.py  pytest_test.py  sessions_test.py  submit_eval_test.py  submit_log_test.py  submit_user_test.py  template_test.py  testing_functions.py  testing_functions_v2.py  trace_test.py  unittests_test.py
tests/test_data/: honey_vanilla_ice_cream  oatmeal_cookies  super_bowl.txt
