[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baserun"
version = "2.0.7"
description = "tools for testing, debugging, and evaluating llm features."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Erik Peterson", email = "erik@baserun.ai" }]
requires-python = ">=3.8"
dependencies = [
  "httpx[http2]>=0.24.0",
  "datasets>=2.0.0",
  "pydantic>=2.0.0, <3",
]

[project.urls]
Homepage = "https://baserun.ai"
Repository = "https://github.com/baserun-ai/baserun-py"

[project.entry-points.pytest11]
pbaserun = "baserun.pytest_plugin"

[lint]
extend-select = ["I", "T20"] # isort, flake8-print
target-version = "py38"
line-length = 120
extend-exclude = []
[lint.per-file-ignores]
"baserun/v1/baserun_pb2.py" = "E501" # Line too long
"tests/*" = "T201"                   # `print` found

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[tool.mypy]
exclude = ["baserun/v1/*", "tests"]
ignore_missing_imports = true
#TODO
#disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "baserun.v1.*"
disable_error_code = ["var-annotated"]
